Fix layer overlapping in front-end.

--- a/framework/html/css/style.css
+++ b/framework/html/css/style.css
@@ -18,6 +18,7 @@ header
     top: 0px;
     position: fixed;
     height: 140px;
+    z-index: 100;
 }
 
 #title
